fixed burger menu width on mobile devices

--- a/client/src/css/general/navbar.css
+++ b/client/src/css/general/navbar.css
@@ -100,7 +100,7 @@
 	background-color: #fac04e;
 	color: black;
 	padding-top: 15%;
-	width: auto;
+	width: auto !important;
 }
 .navbarTogglerButtonCustom {
 	top: 10px;
@@ -596,7 +596,7 @@
 		top: 0vw;
 		background-color: #fac04e;
 		padding-top: 15%;
-		left: 50vw;
+		left: 20vw;
 	}
 	.bm-menu {
 		line-height: 4vw;
